# package-run

./: .gitignore  LICENSE  README.md  README.zh.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/screenshots/: mock-empty.html  mock.html
scripts/: gen_tray_icon.py
src/: App.css  App.tsx  demo.ts  i18n.ts  main.tsx  update.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_window.rs  main.rs  ports.rs  projects.rs  runner.rs  settings.rs  update.rs
src-tauri/tests/: e2e.rs
