[package]
name = "package-run"
version = "0.1.0"
description = "Lightweight local frontend project manager (menu bar / system tray)"
authors = ["huangxinliang"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "package_run_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
libc = "0.2"

[dependencies]
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "2.3.2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
libc = "0.2.186"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
ureq = { version = "2", features = ["json"] }

